--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: alert_info
 description: "Alert info is flutter package to display an animated alert info, warning, succes or error message from the top or bottom"
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/MoezAyadiDev/alert_info
 repository: https://github.com/MoezAyadiDev/alert_info
 screenshots:
@@ -13,7 +13,7 @@ topics:
   - alert
 
 environment:
-  sdk: ">=3.5.4 <4.0.0"
+  sdk: ^3.8.1
 
 dependencies:
   flutter:
